fixes to spacing, cleanup

--- a/src/components/movies/MovieCard.scss
+++ b/src/components/movies/MovieCard.scss
@@ -90,7 +90,7 @@
       font-size: var(--font-size-medium);
       font-weight: var(--font-weight-medium);
       color: var(--white);
-      margin-bottom: 12px
+      margin-bottom: 0;
     }
 
     &-title, &-year, &-favorite {
