--- a/src/views/Movie.scss
+++ b/src/views/Movie.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-flow: row;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 
   .text-label {
     margin-bottom: 10px;
@@ -12,18 +12,23 @@
     display: flex;
     flex-flow: column;
     width: 40.27vw;
+  }
 
-    .text-label {
-      font-size: 16px;
-      font-weight: var(--font-weight-base);
-      letter-spacing: 0.17px;
-      line-height: 24px;
-    }
+  &__meta, &__rating, &__title, &__plot, &__details {
+    margin: 20px 0;
   }
 
   &__meta {
     color: var(--text-secondary);
-    padding: 30px 0 10px;
+    margin-bottom: 0;
+
+    .text-label {
+      &:not(:last-child):after {
+        content: '·';
+        padding: 0 8px;
+      }
+    }
+
   }
 
   &__rating {
@@ -31,7 +36,6 @@
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     grid-auto-flow: column;
     grid-column-gap: 16px;
-    padding: 20px 0
   }
 
   &__title {
@@ -39,17 +43,11 @@
     color: var(--white);
     letter-spacing: 0.87px;
     line-height: 88px;
-    padding: 20px 0;
-  }
-
-  &__plot {
-    padding: 20px 0
   }
 
   &__details {
     display: flex;
     justify-content: space-between;
-    padding: 15px 0;
 
     &-item {
       ul {
@@ -80,8 +78,8 @@
     background-position: center;
     background-repeat: no-repeat;
     aspect-ratio: 0.75;
+    box-shadow: 0 4px 30px 0 rgba(5, 10, 13, 0.60);
   }
-
 
   @media only screen and (max-width: 900px) {
     flex-flow: column;
